2004-06-11  Larry Ewing  <lewing@ximian.com>

	* misc/e-source-selector.c: make the source selector use a colock
	block instead of setting the foreground to indicate the source
	color.
	(pixbuf_cell_data_func): actually initialize the pixbuf (bad larry).
	(pixbuf_cell_data_func): clean up warnings.  (double bad larry).
	(pixbuf_cell_data_func): fix the appearance a little.

2004-05-20  Rodney Dawes  <dobey@ximian.com>

	* e-timezone-dialog/e-timezone-dialog.c (e_timezone_dialog_construct):
	Use the activate signal, instead of changed, for the combo box
	(on_map_motion): Set the text in the combo's entry when we mouse over
	one of the points on the map, as a preview for the timezone
	(on_map_leave): Reset the combo's entry to the timezone we started with
	when we leave the map

	Fixes #57122

2004-04-09  Rodney Dawes  <dobey@ximian.com>

	* e-timezone-dialog/e-timezone-dialog.c
	(e_timezone_dialog_construct): Set the border widths on the dialog's
	vbox and action area to be HIG-complaint
	Get rid of the timezone preview widget in here
	Point the internal 'table' to the right widget
	(on_map_motion): Get rid of the extra-hacky code to set the preview
	widget's label to the timezone, now that that widget is gone
	(on_map_leave): Update the comment to not reference the preview
	widget that is now gone
	Get rid of the code to set the preview widget's label to empty string
	* e-timezone-dialog/e-timezone-dialog.glade: Update for HIG-compliance

2004-02-26  JP Rosevear <jpr@ximian.com>

	* e-timezone-dialog/e-timezone-dialog.c
	(e_timezone_dialog_dispose): don't reference uninitialized memory

2003-12-16  Hans Petter Jansson  <hpj@ximian.com>

	* misc/e-source-option-menu.c (select_source_foreach_menu_item):
	Use e_source_equal() instead of comparing pointers. This allows user
	to pass in a source that was obtained from somewhere else. Set the
	matching internal source as "selected" instead of the one passed in.